--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
         <div class="header__inner">
 
 <div class="topnav" id="myTopnav">
-                <a class="nav__link" href="index.html">Головна сторінка</a>
+                <a class="nav__link" href="#">Головна сторінка</a>
                 <a class="nav__link" href="Як обр.html">Місце відпочинку</a>
                 <a class="nav__link" href="Doc.html" data-scroll="#blog">Документи</a>
                 <a class="nav__link" href="Tur.html" data-scroll="#works">Туризм в Україні</a>
