--- a/Doc.html
+++ b/Doc.html
@@ -28,6 +28,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 </style>
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
